chore: modify request header
