# src/controller/definitioncontroller.go
@@ -26,8 +26,8 @@ var (
 // @Accept  json
 // @Produce json
 // @param request body request.ProcessDefinitionRequest true "request"
-// @param wf-tenant-code header string true "wf-tenant-code"
-// @param wf-current-user header string true "wf-current-user"
+// @param WF-TENANT-CODE header string true "WF-TENANT-CODE"
+// @param WF-CURRENT-USER header string true "WF-CURRENT-USER"
 // @Success 200 {object} response.HttpResponse
 // @Router /api/process-definitions [POST]
 func CreateProcessDefinition(c echo.Context) error {
@@ -63,8 +63,8 @@ func CreateProcessDefinition(c echo.Context) error {
 // @Accept  json
 // @Produce json
 // @param request body request.ProcessDefinitionRequest true "request"
-// @param wf-tenant-code header string true "wf-tenant-code"
-// @param wf-current-user header string true "wf-current-user"
+// @param WF-TENANT-CODE header string true "WF-TENANT-CODE"
+// @param WF-CURRENT-USER header string true "WF-CURRENT-USER"
 // @Success 200 {object} response.HttpResponse
 // @Router /api/process-definitions [PUT]
 func UpdateProcessDefinition(c echo.Context) error {
@@ -98,8 +98,8 @@ func UpdateProcessDefinition(c echo.Context) error {
 // @Summary 删除流程模板
 // @Produce json
 // @param id path string true "request"
-// @param wf-tenant-code header string true "wf-tenant-code"
-// @param wf-current-user header string true "wf-current-user"
+// @param WF-TENANT-CODE header string true "WF-TENANT-CODE"
+// @param WF-CURRENT-USER header string true "WF-CURRENT-USER"
 // @Success 200 {object} response.HttpResponse
 // @Router /api/process-definitions/{id} [DELETE]
 func DeleteProcessDefinition(c echo.Context) error {
@@ -121,8 +121,8 @@ func DeleteProcessDefinition(c echo.Context) error {
 // @Summary 获取流程模板详情
 // @Produce json
 // @param id path string true "request"
-// @param wf-tenant-code header string true "wf-tenant-code"
-// @param wf-current-user header string true "wf-current-user"
+// @param WF-TENANT-CODE header string true "WF-TENANT-CODE"
+// @param WF-CURRENT-USER header string true "WF-CURRENT-USER"
 // @Success 200 {object} response.HttpResponse
 // @Router /api/process-definitions/{id} [GET]
 func GetProcessDefinition(c echo.Context) error {
@@ -145,8 +145,8 @@ func GetProcessDefinition(c echo.Context) error {
 // @Accept  json
 // @Produce json
 // @param request query request.DefinitionListRequest true "request"
-// @param wf-tenant-code header string true "wf-tenant-code"
-// @param wf-current-user header string true "wf-current-user"
+// @param WF-TENANT-CODE header string true "WF-TENANT-CODE"
+// @param WF-CURRENT-USER header string true "WF-CURRENT-USER"
 // @Success 200 {object} response.HttpResponse
 // @Router /api/process-definitions [GET]
 func ListProcessDefinition(c echo.Context) error {
